tests/typing/bad/poly_overload.catala_en

```catala
declaration min content anything of type t
  depends on x content anything of type t,
             y content anything of type t
  equals if x <= y then x else y

declaration foo content integer equals
  3 + impossible

```

```catala-test-cli
$ catala typecheck
┌─[ERROR]─ 1/2 ─
│
│  Comparison cannot be resolved at this point: the type of the operands is
│  not fully known.
│
├─➤ tests/typing/bad/poly_overload.catala_en:6.13-19:
│   │
│ 6 │   equals if x <= y then x else y
│   │             ‾‾‾‾‾‾
└─
┌─[ERROR]─ 2/2 ─
│
│  In this application of operator +, the type of an operand is unknown
│
├─➤ tests/typing/bad/poly_overload.catala_en:9.3-17:
│   │
│ 9 │   3 + impossible
│   │   ‾‾‾‾‾‾‾‾‾‾‾‾‾‾
│
│ Undetermined type <any type> coming from expression:
├─➤ tests/typing/bad/poly_overload.catala_en:9.5-6:
│   │
│ 9 │   3 + impossible
│   │     ‾
└─
#return code 123#
```
